# r-share

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  justfile
.github/: CODEOWNERS
.github/workflows/: release.yml
pages/: index.html  index.js  style.css
server/: Dockerfile  pom.xml
server/src/main/java/com/scar/server/: Application.java
server/src/main/java/com/scar/server/Controller/: SessionController.java
server/src/main/java/com/scar/server/Dto/: ListenRequest.java  ListenResponse.java  ServeRequest.java  ServeResponse.java  Status.java
server/src/main/java/com/scar/server/Model/: Session.java
server/src/main/java/com/scar/server/Service/: SessionService.java
server/src/main/java/com/scar/server/Socket/: FileTransferHandler.java  FileTransferServer.java  SocketSessionRegistry.java
server/src/main/resources/: application.properties
server/src/test/java/com/scar/server/: ApplicationTests.java
server/src/test/resources/: application.properties
src/: cli.rs  lib.rs
src/args/: health.rs  init.rs  listen.rs  mod.rs  relays.rs  serve.rs
src/config/: constants.rs
src/crypto/: encryption.rs  key_exchange.rs  signing.rs
src/dirs/: config.rs  keys.rs
src/server/: relay.rs
src/utils/: error.rs  file_io.rs  hash.rs  message.rs  mod.rs
tests/: test_encryption.rs  test_exchange.rs
