[package]
name = "rshare"
version = "0.1.0"
edition = "2024"

[lib]
name = "rshare"
path = "src/lib.rs"

[[bin]]
name = "rs"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = false
incremental = false
debug = false


[dependencies]
clap = { version = "4.5.46", features = ["derive"] }

tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }

rand = "0.9.2"
hex = "0.4.3"
ed25519-dalek = "2.2.0"

dirs = "6.0.0"
# zip = "6.0.0" # (commented out for future use)

chrono = "0.4.42"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.9.8"
anyhow = "1.0.100"

indicatif = "0.18.1"
colored = "3.0.0"
figlet-rs = "0.1.5"
sha2 = "0.10.9"