[package]
name = "rshare"
version = "0.1.0"
edition = "2024"

[lib]
name = "rshare"
path = "src/lib.rs"

[[bin]]
name = "rs"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = false
incremental = false
debug = false


[dependencies]
# CLI parsing
clap = { version = "4.5.46", features = ["derive"] }

# Networking
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
local-ip-address = "0.6.5"

# Cryptography
rand = "0.9.2"
rand_core = "0.9.3"
hex = "0.4.3"
ed25519-dalek = "2.2.0"
x25519-dalek = "2.0.1"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.9"

# File handling
dirs = "6.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.9.8"

# Utilities
chrono = "0.4.42"
anyhow = "1.0.100"
indicatif = "0.18.2"
colored = "3.0.0"
figlet-rs = "0.1.5"